fixed overflow

--- a/assets/styles/blobs.scss
+++ b/assets/styles/blobs.scss
@@ -1,7 +1,7 @@
 .blob-content-1 {
     margin-top: -200px;
     margin-bottom: -180px;
-    width: 100vw;
+    width: 100%;
     font-size: 0;
     z-index: 5;
 
@@ -18,8 +18,6 @@
     }
 
     .divider-1 {
-        width: 100vw;
-        overflow: hidden;
         margin-bottom: -1px;
 
         svg {
@@ -33,8 +31,6 @@
     }
 
     .divider-2 {
-        width: 100%;
-        overflow: hidden;
         margin-top: -1px;
 
         svg {
@@ -47,7 +43,7 @@
 .blob-content-2 {
     margin-top: -400px;
     margin-bottom: -300px;
-    width: 100vw;
+    width: 100%;
     font-size: 0;
     z-index: 1;
     
@@ -57,7 +53,7 @@
     }
 
     @media (min-width: 600px) {
-        margin-top: -200px;
+        margin-top: -203px;
         margin-bottom: 0px;
         z-index: 3;
     }
@@ -66,8 +62,6 @@
     }
 
     .divider-1 {
-        width: 100vw;
-        overflow: hidden;
         margin-bottom: -1px;
 
         svg {
@@ -81,8 +75,6 @@
     }
 
     .divider-2 {
-        width: 100%;
-        overflow: hidden;
         margin-top: -1px;
 
         svg {
@@ -97,7 +89,7 @@
 
 .blob-content-3 {
     margin-top: -199px;
-    width: 100vw;
+    width: 100%;
     font-size: 0;
     z-index: 1;
     position: relative;
@@ -110,17 +102,12 @@
     }
 
     .divider-1 {
-        width: 100vw;
-        overflow: hidden;
         margin-bottom: -1px;
 
         svg {
             height: 200px;
-            width: 100%;
-
-            
-        }
-        
+            width: 100%;  
+        }  
     }   
 }
 
