--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -31,7 +31,7 @@ footer {
 }
 
 .socials {
-  width: 100vw;
+  //width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -41,6 +41,12 @@ footer {
     width: 2rem;
     height: 2rem;
     margin-right: 1rem;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
 
    } 
 }
