--- a/assets/styles/hero.scss
+++ b/assets/styles/hero.scss
@@ -1,10 +1,9 @@
 .header {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   @media (min-width: 600px) {
     position: relative;
-    height: 100vh;
+    //height: 100vh;
   }
 }
 
@@ -79,7 +78,7 @@
 }
 
 .animate-link {
-  animation: move-in 1.6s ease 1s forwards; 
+  animation: move-in 1s linear 1s forwards; 
 }
 
 @keyframes move-in {
