--- a/assets/styles/images.scss
+++ b/assets/styles/images.scss
@@ -1,8 +1,7 @@
-img {
+.img-2, .img-3 {
   width: 100%;
   height: 100%;
   display: block;
-    
 }
 
 @media screen and (min-width: 600px) {
@@ -28,6 +27,7 @@ img {
       width: 450px;
     }
     .img-house-desk {
+      width: 100%;
       object-fit: cover;
     } 
   }
