--- a/assets/styles/sections.scss
+++ b/assets/styles/sections.scss
@@ -1,9 +1,9 @@
 section {
-    position: relative;   
+    position: relative; 
 }
 
 .hero-section { 
-    width: 100vw;
+    width: 100%;
     @media (min-width: 600px) {
         height: 100%;
         z-index: 3; 
@@ -11,9 +11,11 @@ section {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        //overflow-x: hidden;
   }
 
   img {
+      width: 100%;
       object-fit: cover;
       @media (min-width: 1800px) {
         width: 100vw;
@@ -25,7 +27,6 @@ section {
     position: relative;
     display: flex;
     flex-direction: column;
-    
 }
 
 .section-sign-up {
