--- a/assets/styles/text-blocks.scss
+++ b/assets/styles/text-blocks.scss
@@ -1,5 +1,5 @@
 @mixin center-elements {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
